added new game button

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <h3>You Got These Wrong:
             <span id="playerguesses"></span>
           </h3>
+          <button>New Game</button>
         </div>
       </div>
     </div>
