--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           <h3>You Got These Wrong:
             <span id="playerguesses"></span>
           </h3>
-          <button>New Game</button>
+          <div>
+            <button>New Game</button>
+          </div>
         </div>
       </div>
     </div>
