--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <h3>You Got These Wrong:
             <span id="playerguesses"></span>
           </h3>
-          <div>
-            <button>New Game</button>
+          <div class ="row">
+            <button type="button" class="btn btn-primary">Restart!</button>
           </div>
         </div>
       </div>
